--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "^7.0.3",
+    "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "font-awesome": "^4.7.0",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
