--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angularfire2": "^5.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "dhtmlx-scheduler": "^4.4.0",
     "firebase": "^5.5.8",
     "font-awesome": "^4.7.0",
+    "from-cdn": "^1.0.1",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
@@ -36,9 +38,10 @@
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@types/dhtmlxscheduler": "^4.3.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
