--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
-    "@angular/forms": "^7.0.3",
+    "@angular/forms": "^7.0.4",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.0.4",
+    "@angular/material-moment-adapter": "^7.0.4",
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "^7.0.3",
@@ -30,6 +31,7 @@
     "firebase": "^5.5.8",
     "font-awesome": "^4.7.0",
     "from-cdn": "^1.0.1",
+    "moment": "^2.22.2",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
