--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "^7.0.4",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.1.0",
@@ -35,6 +36,7 @@
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
+    "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
